[package]
name = "taiku"
version = "1.1.0"
description = "ERS Tech ISP短接宝典"
authors = ["ERS Tech"]
edition = "2021"

[lib]
name = "taiku_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2.9"
urlencoding = "2.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-updater = "2"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

